--- a/style.css
+++ b/style.css
@@ -14,5 +14,48 @@ form label{
 
 }
 form{
-  margin: 40px 0;
+  margin: 20px 0;
+  border: 5px solid orange;
+  border-radius:5px ;
+  margin-bottom:5px;
+}
+
+.enviar {
+  width: 40%;
+  padding: 15px 0;
+  background-color: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: 1s all;
+  cursor: pointer;
+}
+
+.select{
+   padding: 5px 0;
+   background-color: orange;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  margin-left: 65px;
+}
+.qm{
+  margin-top: 10px;
+  padding: 5px 0;
+  background-color: orange;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+}
+body{
+  background-color: #2a8dcb;
+}
+
+#hora{
+   margin-right: 10px;
 }
